@@ -1,4 +1,4 @@
 #Ibator build version info
-#Tue Jun 16 16:44:16 CDT 2009
+#Tue Jun 16 17:01:10 CDT 2009
 version=1.2.2
-buildNum=744
+buildNum=745
