@@ -105,6 +105,8 @@
       plugins.</li>
   <li>Fixed addCriterionfor JDBC* methods so that they all do a null check.</li>
   <li>Fixed IbatorRunner so that configuration errors are shown (thanks to Karel Rank)</li>
+  <li>IBATIS-605 - Added Informix Dialect for
+      <a href="configreference/generatedKey.html">&lt;generatedKey&gt;</a></li>
 </ul>
 
 <h2>Version 1.2.1</h2>
